src/templates/blog-post.css
.image-wrapper {
  max-width: 600px;
  height: 600px;
  text-align: center;
  margin: 1.888rem auto;
}

.image-wrapper img {
  height: 100%;
  max-width: 100%;
  max-height: 100%;
}

blockquote {
  font-style: italic;
  color: #4e4e58;
}

main p {
  font-size: 19px;
  font-family: "Crimson Text", Georgia, 'Times New Roman', Times, serif;
}

main h2 {
  margin-top: 2.666rem;
}

main .articleBodyContainer {
  width: 100%;
  margin: 0 auto;
  max-width: 700px;
  padding-left: 10px;
  padding-right: 10px;
}

pre {
  background-color: #ddd;
  padding: 1em;
}

.image-gallery-sm {
  width: 100%;
}

.image-gallery-sm > p {
  margin: 4rem auto;
}

.image-gallery-sm img {
  display: block;
  max-width: 450px;
  max-height: 450px;
  margin: 0 auto;
}

/* Editing Styles */

.PostInput {
  text-align: center;
  display: block;
  border: none;
  width: 100%;
}

.PostInput:focus {
  outline: none;
}

.PostInput.h1 {
  font-size: 2.5em;
  color: #222;
}

.PostInput.h3,
.PostInput.h4 {
  color: #111;
}

.PostInput.h3 {
  font-size: 1.5em;
}


textarea {
  background: none;
  border: none;
  resize: none;
  width: 100%;
  height: 400px;
  overflow: hidden;
  padding-bottom: 32px;
  margin-bottom: 32px;
  font-family: "Crimson Text", Georgia, 'Times New Roman', Times, serif;
}

textarea:focus {
  outline: none;
}

.BlogPostToolbar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 50px;
  z-index: 1000;
}

.BlogPostToolbar .actions {
  position: absolute;
  top: -42px;
  left: 0;
  right: 0;
  padding: 8px;
  background-color: #3e652f;
  transition: top 0.3s ease;
}

.BlogPostToolbar:hover .actions {
  top: 0;
}

.BlogPostToolbar button {
  color: #fff;
  background-color: #3e652f;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  margin: 0 8px;
}

.BlogPostToolbar button:hover {
  background-color: #fff;
  color: #3e652f;
}

.BlogPostToolbar button.publishButton {
  background-color: #f3d634;
}

.BlogPostToolbar button.publishButton:hover {
  background-color: #0bba1c;
}

.BlogPostToolbar button.publishButton.published {
  background-color: #0bba1c;
}

.BlogPostToolbar button.publishButton.published:hover {
  color: #111;
  background-color: #f3d634;
}

